# dstu7564-ts-worker

./: .eslintrc.json  .gitattributes  .gitignore  FILES_CREATED.txt  LICENSE  README.md  VERIFICATION_REPORT.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
docs/: crypto-verification.md
native/: CMakeLists.txt  Makefile  README.md  test_compile.c  test_multiple.c
native/include/: kupyna.h
native/src/: kupyna.c  kupyna_tables.c
public/wasm/: .gitkeep
scripts/: build-wasm.sh
src/: main.ts
src/lib/: kupyna-client.ts
src/types/: kupyna-wasm.d.ts  worker-messages.ts
src/wasm/: kupyna-wasm.ts
src/worker/: kupyna.worker.ts
